--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,17 @@
     <string name="forget">Forget password?</string>
     <string name="search">Search</string>
     <string name="input_ing">Input your ingredients</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="empty">Field can not be blank</string>
+    <string name="deleted">Item deleted</string>
     <string name="daging">Daging</string>
     <string name="ayam">Ayam</string>
     <string name="telur">Telur</string>
+    <string name="ikan">Ikan</string>
+    <string name="tahu">Tahu</string>
+    <string name="tempe">Tempe</string>
+    <string name="hello_blank_fragment">Hello</string>
+    <string name="edit_ingredients">Edit your ingredients</string>
+    <string name="recommendation">Recommendation</string>
+    <string name="ingredients">Ingredients</string>
+    <string name="steps">Steps</string>
 </resources>
