--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,29 +3,25 @@
     <string name="logo_title">RECIPHY</string>
     <string name="log_in">Log In</string>
     <string name="sign_up">Sign Up</string>
-    <string name="dont_have_account">Don\'t have an account?</string>
-    <string name="have_account">Already have an account?</string>
-    <string name="homepage_greeting">What do you want to cook today?</string>
+    <string name="dont_have_account">Tidak memiliki akun?</string>
+    <string name="have_account">Sudah memiliki akun?</string>
+    <string name="homepage_greeting">Apa yang ingin anda masak hari ini?</string>
     <string name="username">Username or Email</string>
     <string name="signup_username">Username</string>
     <string name="signup_email">Email</string>
     <string name="password">Password</string>
-    <string name="continue_with">Or continue with</string>
+    <string name="continue_with">Atau lanjutkan dengan</string>
     <string name="google">Google Account</string>
-    <string name="forget">Forget password?</string>
-    <string name="search">Search</string>
-    <string name="input_ing">Input your ingredients</string>
-    <string name="empty">Field can not be blank</string>
-    <string name="deleted">Item deleted</string>
+    <string name="forget">Lupa password?</string>
+    <string name="search">Cari</string>
+    <string name="input_ing">Talur, Daun bawang, Cabai</string>
     <string name="daging">Daging</string>
     <string name="ayam">Ayam</string>
     <string name="telur">Telur</string>
     <string name="ikan">Ikan</string>
     <string name="tahu">Tahu</string>
     <string name="tempe">Tempe</string>
-    <string name="hello_blank_fragment">Hello</string>
-    <string name="edit_ingredients">Edit your ingredients</string>
-    <string name="recommendation">Recommendation</string>
-    <string name="ingredients">Ingredients</string>
-    <string name="steps">Steps</string>
+    <string name="recommendation">Rekomendasi</string>
+    <string name="ingredients">Bahan</string>
+    <string name="steps">Cara membuat</string>
 </resources>
